step-11 alignment issues fixed and actions/download-artifact@v3 is changed to actions/download-artifact@v4 to fix the deployment issue

--- a/src/assets/css/whyUsSection.css
+++ b/src/assets/css/whyUsSection.css
@@ -61,6 +61,7 @@
 
 .why-us .faq-container .faq-item .faq-content p {
   margin-bottom: 0;
+  text-align: justify;
 }
 
 .why-us .faq-container .faq-item .faq-icon {
